nodelabs case completed

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,8 @@ REDIS_PORT=6379
 
 # RabbitMQ Configuration
 RABBITMQ_URI=amqp://localhost
+
+# Elasticsearch Configuration
+ELASTICSEARCH_NODE=http://localhost:9200
+ELASTICSEARCH_USERNAME=
+ELASTICSEARCH_PASSWORD=
