--- a/.env.docker
+++ b/.env.docker
@@ -16,3 +16,8 @@ REDIS_PORT=6379
 
 # RabbitMQ Configuration
 RABBITMQ_URI=amqp://guest:guest@rabbitmq:5672
+
+# Elasticsearch Configuration
+ELASTICSEARCH_NODE=http://elasticsearch:9200
+ELASTICSEARCH_USERNAME=
+ELASTICSEARCH_PASSWORD=
