--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
         "prepare": "husky"
     },
     "dependencies": {
+        "@socket.io/redis-adapter": "^8.3.0",
         "amqplib": "^0.10.8",
         "bcrypt": "^6.0.0",
         "dotenv": "^17.2.0",
         "express": "^5.1.0",
         "express-rate-limit": "^8.0.1",
         "helmet": "^8.1.0",
+        "ioredis": "^5.6.1",
         "joi": "^17.13.3",
         "jsonwebtoken": "^9.0.2",
         "lint-staged": "^16.1.2",
@@ -25,7 +27,8 @@
         "redis": "^5.6.0",
         "socket.io": "^4.8.1",
         "swagger-ui-express": "^5.0.1",
-        "winston": "^3.17.0"
+        "winston": "^3.17.0",
+        "winston-elasticsearch": "^0.19.0"
     },
     "devDependencies": {
         "husky": "^9.1.7",
